# LabelBOX

./: CMakeLists.txt  annotation.h  annotationfile.cpp  annotationfile.h  classes.txt  image.cpp  image.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
sample_dataset/: 1151-20221012-4072018.txt  1151-20221015-4086722.txt  1151-20221020-4113191.txt  1151-20221028-4157495.txt
